objects/Junction_Object__c.object
<CustomObject>
    <fields>
        <fullName>Account_Profile__c</fullName>
        <label>Account Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Junction Object</relationshipLabel>
        <relationshipName>Junction_Object</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Junction Object</relationshipLabel>
        <relationshipName>Junction_Object</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Badge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Badge</label>
        <referenceTo>WorkBadgeDefinition</referenceTo>
        <relationshipLabel>Junction Object</relationshipLabel>
        <relationshipName>Junction_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Junction Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Junction Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Junction Object</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>